Correção de code smells